# OpenCL_BitonicSort

./: BitonicSorter.cpp  BitonicSorter.h  CMakeLists.txt  MyTester.cpp  main.cpp  sort_kernel.cl
tests/: test1.txt  test2.txt  test3.txt  test4.txt
